Fixing menu alignment

--- a/assets/_sass/_header.scss
+++ b/assets/_sass/_header.scss
@@ -115,7 +115,8 @@ header {
 				}
 
 				&:first-child ul {
-					left: -142%;
+					right: -278%;
+					left: auto;
 				}
 
 				&:last-child {
